add code for resizing

--- a/ehrungen.html
+++ b/ehrungen.html
@@ -51,7 +51,7 @@
 
       <!-- Hero-Abbildung (optional) -->
       <figure class="hero-figure">
-        <img src="./assets/blumenstrauss.jpg" alt="Festlicher Blumenstrauß zur Ehrung" loading="lazy" decoding="async" />
+        <img src="./assets/blumenstrauss.jpg" alt="Festlicher Blumenstrauss zur Ehrung" loading="lazy" decoding="async" />
         <figcaption class="muted">Gemeinsam feiern – Danke für die vielen Jahre im FTV Ennetbaden.</figcaption>
       </figure>
 
