--- a/fotogalerie.html
+++ b/fotogalerie.html
@@ -43,7 +43,7 @@
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./kontakt.html">Kontakt</a></li>
-        <li><a href="./anlaesse.html">Anlässe</a></li>
+        <li><a href="./anleasse.html">Anlässe</a></li>
         <li><a href="./ehrungen.html">Ehrungen</a></li>
         <li><a href="./fotogalerie.html" aria-current="page">Fotogalerie</a></li>
         <li><a href="./location.html">Turnhalle</a></li>
@@ -206,7 +206,7 @@
           <button class="lb-btn lb-prev" aria-label="Vorheriges Bild">‹</button>
           <img class="lb-img" alt="" />
           <button class="lb-btn lb-next" aria-label="Nächstes Bild">›</button>
-          <button class="lb-close" aria-label="Schließen">×</button>
+          <button class="lb-close" aria-label="Schliessen">×</button>
         </div>
       `;
       document.body.appendChild(dlg);
