--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="card-content">
           <h3>Freude am Turnen</h3>
           <p>
-            Der Spaß steht bei uns im Vordergrund: Jede turnt so, wie sie kann und mag.
+            Der Spass steht bei uns im Vordergrund: Jede turnt so, wie sie kann und mag.
             Jede kommt auf ihre Kosten – die sportliche sowie die weniger sportliche.
           </p>
           <p class="price">Mitgliederbeitrag: <strong>CHF&nbsp;100.–</strong></p>
